clusters/KC-Int/deployments/network/external-proxy/truenas-int/deluge.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: deluge
spec:
    type: ExternalName
    selector:
        app: traefik
    ports:
        - name: deluge
          port: 8112
          targetPort: 8112
    externalName: ENC[AES256_GCM,data:rgumx6X20AYm0BE=,iv:5iQE4Yoi5tM+bg3Pi7q3XfTxutxlXxMKl3LzHVy6DWM=,tag:dCbYVug3b7NdHjAwykIi0g==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxK0RqNnhpTGJUZW9XOVdB
[...]
            xNYyC5Ujf2CeGbVdkOA/W85Pb8WTw/ycwKPUysOj2h8H6MsC6Wl1kA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-27T13:17:01Z"
    mac: ENC[AES256_GCM,data:KBZaCQHS0ZT2Liv1ejopvtgIH0+x7GhJUWBUodIbtLHw1tbqV3wbCKF0CzDSwA7s2AqukbSMDbOd7lEbUZswK0lVqbi8eJSXxS5cdNUKSpmiN4xG9R8/kLkZdredGHGXqYMop+qqzWCTa+sGYf5pfwK8S/r/Y/VL+ocjatAi1b0=,iv:JJRmuXnea0Fn4RACS3lNpcjE9Weil2lMWTuDpBHXJ3c=,tag:8j1ihr9oUPFzyHobC7GQAA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: deluge
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:AJ2b7XMzX0Uy9FdqxgKnmXzGkXWH5Ru/Fvo=,iv:5brzL87hlHZFr9EDB8+bLXu8cYBlyUUSxulYgui+JNk=,tag:1Rkf1Nqr9cYGTIqqxi99DA==,type:str]
          kind: Rule
          services:
            - name: deluge
              port: 8112
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxK0RqNnhpTGJUZW9XOVdB
[...]
            xNYyC5Ujf2CeGbVdkOA/W85Pb8WTw/ycwKPUysOj2h8H6MsC6Wl1kA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-27T13:17:01Z"
    mac: ENC[AES256_GCM,data:KBZaCQHS0ZT2Liv1ejopvtgIH0+x7GhJUWBUodIbtLHw1tbqV3wbCKF0CzDSwA7s2AqukbSMDbOd7lEbUZswK0lVqbi8eJSXxS5cdNUKSpmiN4xG9R8/kLkZdredGHGXqYMop+qqzWCTa+sGYf5pfwK8S/r/Y/VL+ocjatAi1b0=,iv:JJRmuXnea0Fn4RACS3lNpcjE9Weil2lMWTuDpBHXJ3c=,tag:8j1ihr9oUPFzyHobC7GQAA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
