clusters/KC-Int/deployments/network/external-proxy/truenas-int/immich.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: immich
spec:
    type: ExternalName
    selector:
        app: traefik
    ports:
        - name: immich
          port: 30041
          targetPort: 30041
    externalName: ENC[AES256_GCM,data:Rd3DGidkhozJI4U=,iv:ONIMamj1LIcytragzCJs3f5Karh0XkluA3nJ+s1sExI=,tag:eCeNVbe9p6DK5BmWGUURKw==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVTHlKcXNzWlRKU1IzbTMw
[...]
            /K6UKNYDGQLL1dLCszUg4UTKQvMNWPlVvNE9kB2j+OFbUc/nTnNyCQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-22T13:35:10Z"
    mac: ENC[AES256_GCM,data:i3cvGDO9bmXQujMenmztDLHbj9pXykoAGykwJT0EfFcOWlAsBjCJjNA9ETxIyDNsvdXUc61uG8WhWlf2nJ05u2ClOdW/PvS00uvMOeNBOmysE4CXURqe5mJwmwR3jg9gdkxgPExvKcYfK0uhzmgEkxxa9efFafwRmJMAtaUw7vo=,iv:tV7s/vHKInHnjOhkCBvS3nM6ogM+tQZcfrKQJltrsBE=,tag:USARqsWoamLluUZ3NNMVYA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: immich
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:/MxFJxbBJspTOH1p8ex6S0FV7LxGe6AapXI=,iv:Wu40BwmOCAAlKicvf9l/kP8+1t7zaQo5ul7Eu5r6fqA=,tag:1PBDaydwZ+UU3Y0WqUK+oQ==,type:str]
          services:
            - name: immich
              port: 30041
        - kind: Rule
          match: ENC[AES256_GCM,data:79CrhPMVwN2X4uMYcTBg8Cc2zpRrJg==,iv:4eD7l8bcobkshPaVBVbH6xOFCM1yPJ59AjqWMAnaZgk=,tag:RwwJ900UqSEXPP8pln8vDA==,type:str]
          services:
            - name: immich
              port: 30041
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVTHlKcXNzWlRKU1IzbTMw
[...]
            /K6UKNYDGQLL1dLCszUg4UTKQvMNWPlVvNE9kB2j+OFbUc/nTnNyCQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-22T13:35:10Z"
    mac: ENC[AES256_GCM,data:i3cvGDO9bmXQujMenmztDLHbj9pXykoAGykwJT0EfFcOWlAsBjCJjNA9ETxIyDNsvdXUc61uG8WhWlf2nJ05u2ClOdW/PvS00uvMOeNBOmysE4CXURqe5mJwmwR3jg9gdkxgPExvKcYfK0uhzmgEkxxa9efFafwRmJMAtaUw7vo=,iv:tV7s/vHKInHnjOhkCBvS3nM6ogM+tQZcfrKQJltrsBE=,tag:USARqsWoamLluUZ3NNMVYA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
