clusters/KC-Int/deployments/network/external-proxy/truenas-int/jellyfin.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: jellyfin
spec:
    type: ExternalName
    selector:
        app: traefik
    ports:
        - name: jellyfin
          port: 8096
          targetPort: 8096
    externalName: ENC[AES256_GCM,data:jHylan0KvMTyIUM=,iv:kaPTl4HeX8xFZKIWkGWIFcsuJVCvtkoViKACvVjoniQ=,tag:bwDIl9BBYgcoKmX3EXbN0g==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFQm9MNjR2NUR5MWZMQkRV
[...]
            /AdTzkvNyla1AjBeBX8ib4O3EW1JUtnGQZO47+zjqTYofS5T1G/LfQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-22T13:36:03Z"
    mac: ENC[AES256_GCM,data:LOH5r33LXaXl4y1/8piYmt3TD4q5RFQ/QpwbOuk/RuUJwjNHaKJGzBZorSm2irqcC8zyyWgS7iLLI5fOIkm4soQsrjzvPIjcB5eBBc7UpMi/uoOjovVYrnf/zZ5tKeXwuVB3G+opVZE4xZ1ndJH0svPr7XJFcBX9nQjHTUMF/Bs=,iv:6FYHJQZonXDD7buOsiZGicoI46VoOIC/NNPC3DJjBXc=,tag:ohGFOv9iND6qJ5B9oa0Oow==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: jellyfin
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:YdeMey9Fnqb2Y6rVSxX8rK+AR79hKmD3,iv:FY/L7HPp67tGWZpCj1Oz/cCKSaE6A32ENtBElvx7Oew=,tag:1nXbp1iF6Jg2tU9BXPCgkg==,type:str]
          kind: Rule
          services:
            - name: jellyfin
              port: 8096
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFQm9MNjR2NUR5MWZMQkRV
[...]
            /AdTzkvNyla1AjBeBX8ib4O3EW1JUtnGQZO47+zjqTYofS5T1G/LfQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-22T13:36:03Z"
    mac: ENC[AES256_GCM,data:LOH5r33LXaXl4y1/8piYmt3TD4q5RFQ/QpwbOuk/RuUJwjNHaKJGzBZorSm2irqcC8zyyWgS7iLLI5fOIkm4soQsrjzvPIjcB5eBBc7UpMi/uoOjovVYrnf/zZ5tKeXwuVB3G+opVZE4xZ1ndJH0svPr7XJFcBX9nQjHTUMF/Bs=,iv:6FYHJQZonXDD7buOsiZGicoI46VoOIC/NNPC3DJjBXc=,tag:ohGFOv9iND6qJ5B9oa0Oow==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
