clusters/KC-Int/deployments/network/external-proxy/truenas-int/minio.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: minio
spec:
    type: ExternalName
    selector:
        app: traefik
    ports:
        - name: minio
          port: 9002
          targetPort: 9002
        - name: minio-s3
          port: 9000
          targetPort: 9000
    externalName: ENC[AES256_GCM,data:upnHH098PyBkk44=,iv:5ZTpZgiGxd6XRY20GZNnPidFQHyyuQlbN1Rk6wzJZPY=,tag:zfB0/DjjzMYu5Gmnrm2StQ==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3TVJ2NW5sbXY3eE1Ja1VS
[...]
            zhxOBq3647Cb954HirzaDYVmN5mso+FZgS5kDc0vPAw8XUeMOZHwAg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-27T13:20:32Z"
    mac: ENC[AES256_GCM,data:3QzLcPwuIBYQ3fLwTq7inoq6Rj6nJTQ/vNAkdtaPB1vG4iDKZlI4jhoGBsmjz+C/pSfS+QsfedAkkPImLYbW62unU7OBsR0yTSa++U5X7KJz/HSMFZ+SL6IXil4+1fhYCqTb9SpmoKlPpRN3H63R+pEtxVjISxgf6VjE/LAfjeY=,iv:XwxJzePAho3wN2I9U9sItqniGCGmZmhL7cA3jise7oA=,tag:UHYitlFg+Oczp7GrMRqaMA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: minio
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:qEsxqp0WmQcl4x3aT/gFT13KtuzE,iv:9ASmcPfT5TsUyr6JCVtq2FymioY16+vmiKIzNbJBR/w=,tag:p0N0b40eTykTEJl/1bfO7g==,type:str]
          kind: Rule
          services:
            - name: minio
              port: 9002
        - match: ENC[AES256_GCM,data:WMjkuYrd6/ie2J4WVYzMlDz2,iv:ZyWzfCn3iYaBS5qRAM0ZFtkuwuuS7gSq2JYiewUdlGk=,tag:UAwtujvTk9O2ecvvOaTMrg==,type:str]
          kind: Rule
          services:
            - name: minio-s3
              port: 9000
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3TVJ2NW5sbXY3eE1Ja1VS
[...]
            zhxOBq3647Cb954HirzaDYVmN5mso+FZgS5kDc0vPAw8XUeMOZHwAg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-27T13:20:32Z"
    mac: ENC[AES256_GCM,data:3QzLcPwuIBYQ3fLwTq7inoq6Rj6nJTQ/vNAkdtaPB1vG4iDKZlI4jhoGBsmjz+C/pSfS+QsfedAkkPImLYbW62unU7OBsR0yTSa++U5X7KJz/HSMFZ+SL6IXil4+1fhYCqTb9SpmoKlPpRN3H63R+pEtxVjISxgf6VjE/LAfjeY=,iv:XwxJzePAho3wN2I9U9sItqniGCGmZmhL7cA3jise7oA=,tag:UHYitlFg+Oczp7GrMRqaMA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
