clusters/KC-Int/deployments/network/external-proxy/truenas-int/sabnzbd.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: sabnzbd
spec:
    type: ExternalName
    selector:
        app: traefik
    ports:
        - name: sabnzbd
          port: 8080
          targetPort: 8080
    externalName: ENC[AES256_GCM,data:GXh16OyGFFocqw==,iv:AbFsRUD4SikkdL3XkLD5FLSH+59FElwGssF6leD2mkc=,tag:hQOVWBqnTl6tvi4ARdbsug==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIR3E5OWRWM1QzbHZWWk5S
[...]
            FMEiFJNwfhYLb0MzbMF8qLXcrWmMIcBzhjd4j69AuIbJsYG+ZMJWag==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-22T13:36:23Z"
    mac: ENC[AES256_GCM,data:rvJRpfPLViEnox6INz+dSEQn8RE6T3lW4GMhPFxJzNzmQoZ9tsTRv7PHI8fSpZaP3pFR5rsk7o/mGltIMHQ/SzqheVkmoX8lWXylIJZuEN1DoJ7GkfOP7zx6EGoHbSr2VbRi6Ehv7QaRbCNb1I88uVnqaVoINgzOXkrdd40p6uQ=,iv:WhklN11jMYZ5JK1CGoQqlKVk3A1wZLcMAB1JuA0j9x8=,tag:npRTwYV8rLR+PMpyA/fx0g==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: sabnzbd
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:bilD03DOhx/NBjtU+fl/XtRLkAjgbIiA0ZhH,iv:nOWDsySnnZyBclYLvpBh1PPN1KWI40HiQxjzHhpdGlQ=,tag:S3E8ni/svq82UCzTGv8+ug==,type:str]
          kind: Rule
          services:
            - name: sabnzbd
              port: 8080
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIR3E5OWRWM1QzbHZWWk5S
[...]
            FMEiFJNwfhYLb0MzbMF8qLXcrWmMIcBzhjd4j69AuIbJsYG+ZMJWag==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-22T13:36:23Z"
    mac: ENC[AES256_GCM,data:rvJRpfPLViEnox6INz+dSEQn8RE6T3lW4GMhPFxJzNzmQoZ9tsTRv7PHI8fSpZaP3pFR5rsk7o/mGltIMHQ/SzqheVkmoX8lWXylIJZuEN1DoJ7GkfOP7zx6EGoHbSr2VbRi6Ehv7QaRbCNb1I88uVnqaVoINgzOXkrdd40p6uQ=,iv:WhklN11jMYZ5JK1CGoQqlKVk3A1wZLcMAB1JuA0j9x8=,tag:npRTwYV8rLR+PMpyA/fx0g==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
