clusters/KC-Int/deployments/network/external-proxy/truenas-int/syncthing.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: syncthing
spec:
    type: ExternalName
    selector:
        app: traefik
    ports:
        - name: syncthing
          port: 8384
          targetPort: 8384
    externalName: ENC[AES256_GCM,data:8z0Vqh2dsfCxYw==,iv:oFXDdM/ABHTj1Bblqb/8rZfDp7RIwEA3sIUIKXbpBtc=,tag:lIBB9Xuidsq36ZnlWdDU6A==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByQlppODAxWkRJMFhTVnNr
[...]
            ErKrhaqC0+KFTHDoqypyp0vP24/LjuSMDRYzaoiT1zKl7kwVtJTOLw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-22T13:36:13Z"
    mac: ENC[AES256_GCM,data:tDfyRoJ57vFgXeh5TtY+hHkzNEpIO5QIc9bjweQsEuuFz5o2T/j7iTpRaxcZW4tVTV/rbzwnHCkxPSheGJaqXNPeNLmdPCRrtx55lDGBrTHJfLfD0rKTv0xqzUfQRdXrYAGlLkKJbEZWO9YOy8ewxPHPws4j5bCVgtrnjMcgQhc=,iv:nmcEi9K4qMrv2RuYRZ6riCgnEbozUFaM1Q8tjGRpCA8=,tag:oVL7gj4EoworqBipaZr6zA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: syncthing
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:dA+hibZ3AbMQkFhJhLYurNNt4UHmFz02yVV4Y8c=,iv:p43W1zC6Uh/AeNIlYgdDhN/VGXTrpemIMckHDZTFJ+8=,tag:CUJugmxqhgU8ulRYyg+zBA==,type:str]
          kind: Rule
          services:
            - name: syncthing
              port: 8384
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByQlppODAxWkRJMFhTVnNr
[...]
            ErKrhaqC0+KFTHDoqypyp0vP24/LjuSMDRYzaoiT1zKl7kwVtJTOLw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-22T13:36:13Z"
    mac: ENC[AES256_GCM,data:tDfyRoJ57vFgXeh5TtY+hHkzNEpIO5QIc9bjweQsEuuFz5o2T/j7iTpRaxcZW4tVTV/rbzwnHCkxPSheGJaqXNPeNLmdPCRrtx55lDGBrTHJfLfD0rKTv0xqzUfQRdXrYAGlLkKJbEZWO9YOy8ewxPHPws4j5bCVgtrnjMcgQhc=,iv:nmcEi9K4qMrv2RuYRZ6riCgnEbozUFaM1Q8tjGRpCA8=,tag:oVL7gj4EoworqBipaZr6zA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
